ajout des éléments en html sur la fiche perso de chaque photographe

--- a/photographer.html
+++ b/photographer.html
@@ -13,7 +13,13 @@
     </header>
     <main id="main">
       <div class="photograph-header">
+        <div>
+          <h1 id="photographer-name"></h1>
+          <h2 id="photographer-location"></h2>
+          <p id="photographer-desc"></p>
+        </div>
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <img id="photographer-photo">
       </div>
     </main>
     <div id="contact_modal">
