--- a/photographer.html
+++ b/photographer.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <div>
-          <h1 id="photographer-name"></h1>
-          <h2 id="photographer-location"></h2>
-          <p id="photographer-desc"></p>
-        </div>
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-        <img id="photographer-photo">
+
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <title>Fisheye - photographe </title>
+</head>
+
+<body>
+  <header>
+    <img src="assets/images/logo.png" class="logo" />
+  </header>
+  <main id="main">
+    <div class="photograph-header">
+      <div>
+        <h1 id="photographer-name"></h1>
+        <h2 id="photographer-location"></h2>
+        <p id="photographer-desc"></p>
       </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<!-- <form>
+      <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+      <img id="photographer-photo">
+    </div>
+  </main>
+  <div id="contact_modal">
+    <div class="modal">
+      <header>
+        <h2>Contactez-moi</h2>
+        <img src="assets/icons/close.svg" onclick="closeModal()" />
+      </header>
+      <!-- <form>
 					<div>
 						<label>Prénom</label>
 						<input />
@@ -41,28 +43,34 @@
 						<label>Email</label>
 						<input />
 					</div> -->
-        <form name="reserve" action="index.html" method="get" id="form">
-          <div class="formData">
-            <label for="first">Prénom</label><br>
-            <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
-          </div>
-          <div class="formData">
-            <label for="last">Nom</label><br>
-            <input class="text-control" type="text" id="last" name="last" /><br>
-          </div>
-          <div class="formData">
-            <label for="email">E-mail</label><br>
-            <input class="text-control" type="email" id="email" name="email" /><br>
-          </div>
-					<div>
-						<label for="message">Votre message</label>
-						<input class="text-control" type="text" id="message" name="message"/>
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+      <form name="reserve" action="index.html" method="get" id="form">
+        <div class="formData">
+          <label for="first">Prénom</label><br>
+          <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+        </div>
+        <div class="formData">
+          <label for="last">Nom</label><br>
+          <input class="text-control" type="text" id="last" name="last" /><br>
+        </div>
+        <div class="formData">
+          <label for="email">E-mail</label><br>
+          <input class="text-control" type="email" id="email" name="email" /><br>
+        </div>
+        <div>
+          <label for="message">Votre message</label>
+          <input class="text-control" type="text" id="message" name="message" />
+        </div>
+        <button class="contact_button">Envoyer</button>
+      </form>
+    </div>
+  </div>
+  <!-- factory  -->
+  <script src="/scripts/factories/MediaFactory.js"></script>
+  <!-- models  -->
+  <script src="/scripts/models/media.js"></script>
+  <script src="/scripts/pages/photographer.js"></script>
+  <!-- utils  -->
+  <script src="/scripts/utils/contactForm.js"></script>
+</body>
+
 </html>
