rectification par rapport au formulaire

--- a/photographer.html
+++ b/photographer.html
@@ -67,7 +67,7 @@
   <!-- factory  -->
   <script src="/scripts/factories/MediaFactory.js"></script>
   <!-- models  -->
-  <script src="/scripts/models/media.js"></script>
+  <script src="/scripts/templates/media.js"></script>
   <script src="/scripts/pages/photographer.js"></script>
   <!-- utils  -->
   <script src="/scripts/utils/contactForm.js"></script>
