travail sur le bouton contactez moi

--- a/photographer.html
+++ b/photographer.html
@@ -46,7 +46,7 @@
           <label for="message">Votre message</label>
           <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
         </div>
-        <button >Envoyer</button>
+        <button class="contact_button" type="submit">Envoyer</button>
       </form>
   </dialog>
   <!-- factory  -->
