recherche de fonctionnement du formulaire

--- a/photographer.html
+++ b/photographer.html
@@ -33,6 +33,7 @@
         <div class="formData">
           <label for="first">Prénom</label>
           <input class="text-control" type="text" id="first" name="first" minlength="2" />
+          <span class="errorMessage"></span>
         </div>
         <div class="formData">
           <label for="last">Nom</label>
