--- a/photographer.html
+++ b/photographer.html
@@ -36,28 +36,27 @@
         <div class="formData">
           <label for="first">Prénom</label>
           <input class="text-control" type="text" id="first" name="first" minlength="2" />
-          <span id="errorMessage" style="color: red;"></span>
+          <span class="errorMessage" ></span>
         </div>
         <div class="formData">
           <label for="last">Nom</label>
           <input class="text-control" type="text" id="last" name="last" />
-          <span id="errorMessage" style="color: red;"></span>
+          <span class="errorMessage"></span>
         </div>
         <div class="formData">
           <label for="email">E-mail</label>
           <input class="text-control" type="email" id="email" name="email" />
-          <span id="errorMessage" style="color: red;"></span>
+          <span class="errorMessage" ></span>
         </div>
         <div>
           <label for="message">Votre message</label>
           <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
-          <span id="errorMessage" style="color: red;"></span>
+          <span class="errorMessage"></span>
         </div>
         <button class="contact_button" type="submit">Envoyer</button>
       </form>
   </dialog>
-  <!-- factory  -->
-  <script src="/scripts/factories/MediaFactory.js"></script>
+
   <!-- models  -->
   <script src="/scripts/templates/media.js"></script>
   <script src="/scripts/pages/photographer.js"></script>
