style des medias sur la page des photographes

--- a/photographer.html
+++ b/photographer.html
@@ -21,9 +21,9 @@
         <p id="photographer-desc"></p>
       </div>
       <button class="contact_button" id="contact">Contactez-moi</button>
-      <img id="photographer-photo">
+      <img id="photographer-photo" >
     </div>
-    <div id="mediaContainer">
+    <div id="mediaContainer" class="media-container">
       <!-- affichage des médias du photographe  -->
     </div>
   </main>
