creation du filtre des médias

--- a/photographer.html
+++ b/photographer.html
@@ -23,6 +23,18 @@
       <button class="contact_button" id="contact">Contactez-moi</button>
       <img id="photographer-photo" >
     </div>
+
+    <div id="filterContainer">
+      <!-- Création des filtres -->
+      <label for="filterSelect">Filtrer par :</label>
+      <select id="filterSelect">
+        <option value="popularity">Popularité</option>
+        <option value="date">Dates</option>
+        <option value="title">Titre</option>
+      </select>
+    </div>
+    
+
     <div id="mediaContainer" class="media-container">
       <!-- affichage des médias du photographe  -->
     </div>
