--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="media_section"></div>
   </main>
   <script src="scripts/templates/photographer.js"></script>
+  <script src="scripts/templates/media.js"></script>
   <script src="scripts/pages/index.js"></script>
 </body>
 
