--- a/photographer.html
+++ b/photographer.html
@@ -26,10 +26,10 @@
 
     <div id="filterContainer">
       <!-- Création des filtres -->
-      <label for="filterSelect">Filtrer par :</label>
+      <label for="filterSelect">Trier par :</label>
       <select id="filterSelect">
         <option value="popularity">Popularité</option>
-        <option value="date">Dates</option>
+        <option value="date">Date</option>
         <option value="title">Titre</option>
       </select>
     </div>
