travail sur le compteur total de likes

--- a/photographer.html
+++ b/photographer.html
@@ -42,13 +42,12 @@
 
     <!-- Modal compteur de likes-->
     <div id="photographerLikes" class="likes">
-      <div class="likes-content">
-        <div id="likesContent">
+        <div id="likesContent" class="likesContent">
           <!-- affichage compteur total des Likes -->
         </div>
-      </div>
     </div>
 
+    
   </main>
   <dialog id="contact_modal" class="modal">
     <header>
