insertion du prix du journaliste dans la modal rouge en bas à droite de la fiche pero du photogrphe

--- a/photographer.html
+++ b/photographer.html
@@ -41,7 +41,7 @@
 
 
     <!-- Modal compteur de likes-->
-    <div id="photographerLikes" class="likes">
+    <div id="photographerLikes" class="photographersLikes">
         <div id="likesContent" class="likesContent">
           <!-- affichage compteur total des Likes -->
         </div>
