ajout d'un span dans le html pr q la somme de likes ne s'inscrive pas plusieurs fois ds la modale

--- a/photographer.html
+++ b/photographer.html
@@ -42,8 +42,9 @@
 
     <!-- Modal compteur de likes-->
     <div id="photographerLikes" class="photographersLikes">
-        <div id="likesContent" class="likesContent">
+        <div class="likesContent">
           <!-- affichage compteur total des Likes -->
+          <span id="likesContent"></span>
         </div>
     </div>
 
