creation d un fichier lightbox ds le dossier scripts pr la lightbox des medias ( comme pr la modal de contact )

--- a/photographer.html
+++ b/photographer.html
@@ -92,6 +92,7 @@
   <!-- models  -->
   <script src="/scripts/templates/media.js"></script>
   <script src="/scripts/pages/photographer.js"></script>
+  <script src="/scripts/templates/lightbox.js"></script>
   <!-- utils  -->
   <script src="/scripts/utils/contactForm.js"></script>
 </body>
