style sur la lightbox ( centrage et taille )

--- a/photographer.html
+++ b/photographer.html
@@ -52,7 +52,7 @@
 
   <!-- Lightbox Modal -->
   <dialog id="lightbox" class="lightbox">
-    <img src="assets/icons/close.svg" onclick="closeModal()" />
+    <!-- <img src="assets/icons/close.svg" onclick="closeModal()" /> -->
     <div class="lightbox-content">
         <!-- affichage Lightbox -->
     </div>
