création d un bouton close fonctionnel sur la lightbox ( css à revoir ! )

--- a/photographer.html
+++ b/photographer.html
@@ -52,8 +52,9 @@
 
   <!-- Lightbox Modal -->
   <dialog id="lightbox" class="lightbox">
-    <!-- <img src="assets/icons/close.svg" onclick="closeModal()" /> -->
+  
     <div class="lightbox-content">
+        <img src="assets/icons/close.svg" onclick="closeModal()" />
         <!-- affichage Lightbox -->
     </div>
   </dialog>
