travail de style sur la lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -52,17 +52,20 @@
 
   <!-- Lightbox Modal -->
   <dialog id="lightbox" class="lightbox">
-  
+
     <div class="lightbox-content">
       <div class="arrow-container">
-        <img src="assets/fleches/left.svg" alt="flèche de gauche">
+        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow">
       </div>
       <div id="media-content"></div>
       <div class="arrow-container">
-        <img id="btn-close" src="assets/icons/close.svg" alt="bouton fermer">
-        <img src="assets/fleches/right.svg" alt="flèche de droite">
+        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow">
+        <div id="btn-close-container">
+          <img id="btn-close" src="assets/icons/close.svg" alt="bouton fermer">
+        </div>
+
       </div>
-        <!-- affichage Lightbox -->
+      <!-- affichage Lightbox -->
     </div>
   </dialog>
 
