recherche sur le fonctionnement de la flèche droite du carousel

--- a/photographer.html
+++ b/photographer.html
@@ -55,11 +55,11 @@
 
     <div class="lightbox-content">
       <div class="arrow-container">
-        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow">
+        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow arrow-left">
       </div>
       <div id="media-content"></div>
       <div class="arrow-container">
-        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow">
+        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right">
         <div id="btn-close-container">
           <img id="btn-close" src="assets/icons/close.svg" alt="bouton fermer">
         </div>
@@ -100,12 +100,11 @@
     </form>
   </dialog>
 
-  <!-- models  -->
-  <script src="/scripts/templates/media.js"></script>
-  <script src="/scripts/pages/photographer.js"></script>
-  <script src="/scripts/templates/lightbox.js"></script>
-  <!-- utils  -->
-  <script src="/scripts/utils/contactForm.js"></script>
+<script src="/scripts/templates/media.js"></script>
+<script src="/scripts/templates/lightbox.js"></script>
+<script src="/scripts/pages/photographer.js"></script>
+<script src="/scripts/utils/contactForm.js"></script>
+
 </body>
 
 </html>
