--- a/photographer.html
+++ b/photographer.html
@@ -99,10 +99,12 @@
     </form>
   </dialog>
 
-  <script src="/scripts/templates/media.js"></script>
-  <script src="/scripts/templates/lightbox.js"></script>
   <script src="/scripts/pages/photographer.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/templates/media.js"></script>
+  <script src="/scripts/utils/lightbox.js"></script>
+  <script src="scripts/utils/lightbox/nextArrow.js"></script>
+  <script src="scripts/utils/lightbox/previousArrow.js"></script>
 
 </body>
 
