--- a/photographer.html
+++ b/photographer.html
@@ -100,12 +100,14 @@
     </form>
   </dialog>
 
-  <script src="/scripts/pages/photographer.js"></script>
+  <script type="module" src="/scripts/pages/photographer.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/templates/media.js"></script>
-  <script src="/scripts/utils/lightbox.js"></script>
-  <script src="scripts/utils/lightbox/nextArrow.js"></script>
-  <script src="scripts/utils/lightbox/previousArrow.js"></script>
+  <script type="module" src="scripts/templates/media.js"></script>
+  <!-- Qd le navigateur chargera cette balise de script, il traitera media.js en tant que module, permettant l'utilisation d'import/export à l'intérieur du fichier. -->
+  <!-- <script src="/scripts/utils/lightbox.js"></script> -->
+  <script type="module" src="scripts/utils/lightbox.js"></script>
+  <script type="module" src="scripts/utils/lightbox/nextArrow.js"></script>
+  <script type="module" src="scripts/utils/lightbox/previousArrow.js"></script>
 
 </body>
 
