fin de la correction des erreurs ESLint

--- a/photographer.html
+++ b/photographer.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/photographer.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -104,7 +105,6 @@
   <script src="/scripts/utils/contactForm.js"></script>
   <script type="module" src="scripts/templates/media.js"></script>
   <!-- Qd le navigateur chargera cette balise de script, il traitera media.js en tant que module, permettant l'utilisation d'import/export à l'intérieur du fichier. -->
-  <!-- <script src="/scripts/utils/lightbox.js"></script> -->
   <script type="module" src="scripts/utils/lightbox.js"></script>
   <script type="module" src="scripts/utils/lightbox/nextArrow.js"></script>
   <script type="module" src="scripts/utils/lightbox/previousArrow.js"></script>
