--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="photographer_section"></div>
     <div class="media_section"></div>
   </main>
-  <script src="scripts/templates/photographer.js"></script>
+  <script type="module" src="scripts/templates/photographer.js"></script>
   <script type="module" src="scripts/templates/media.js"></script>
-  <script src="scripts/pages/index.js"></script>
+  <script type="module" src="scripts/pages/index.js"></script>
 </body>
 
 </html>
