travail de style sur la modale de contact : msg erreur en rouge , plus gros et a droite / la modale couvre l ecran

--- a/photographer.html
+++ b/photographer.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
+    <img src="assets/images/logo.png" class="logo" alt="fisheye logo" />
   </header>
   <main id="main">
     <div class="photograph-header">
@@ -71,34 +71,37 @@
   </dialog>
 
   <dialog id="contact_modal" class="modal">
-    <header>
-      <h2>Contactez-moi</h2>
-      <!-- <img src="assets/icons/close.svg" onclick="closeModal()" alt="bouton fermant"/> -->
-      <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()" onkeypress="handleKeyPress(event)">
-    </header>
-    <form name="reserve" id="form">
-      <div class="formData">
-        <label for="first">Prénom</label>
-        <input class="text-control" type="text" id="first" name="first" minlength="2" />
-        <span class="errorMessage"></span>
-      </div>
-      <div class="formData">
-        <label for="last">Nom</label>
-        <input class="text-control" type="text" id="last" name="last" />
-        <span class="errorMessage"></span>
-      </div>
-      <div class="formData">
-        <label for="email">E-mail</label>
-        <input class="text-control" type="email" id="email" name="email" />
-        <span class="errorMessage"></span>
-      </div>
-      <div>
-        <label for="message">Votre message</label>
-        <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
-        <span class="errorMessage"></span>
-      </div>
-      <button class="contact_button" type="submit">Envoyer</button>
-    </form>
+    <div id="formulaire" class="formulaire">
+      <header>
+        <h2>Contactez-moi</h2>
+        <!-- <img src="assets/icons/close.svg" onclick="closeModal()" alt="bouton fermant"/> -->
+        <!-- <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()"> -->
+        <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()" onkeypress="handleKeyPress(event)">
+      </header>
+      <form name="reserve" id="form">
+        <div class="formData">
+          <label for="first">Prénom</label>
+          <input class="text-control" type="text" id="first" name="first" minlength="2" />
+          <span class="errorMessage"></span>
+        </div>
+        <div class="formData">
+          <label for="last">Nom</label>
+          <input class="text-control" type="text" id="last" name="last" />
+          <span class="errorMessage"></span>
+        </div>
+        <div class="formData">
+          <label for="email">E-mail</label>
+          <input class="text-control" type="email" id="email" name="email" />
+          <span class="errorMessage"></span>
+        </div>
+        <div>
+          <label for="message">Votre message</label>
+          <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
+          <span class="errorMessage"></span>
+        </div>
+        <button class="contact_button" type="submit">Envoyer</button>
+      </form>
+    </div>
   </dialog>
 
   <script type="module" src="/scripts/pages/photographer.js"></script>
