rech sur le btnClose de la modale de contact qui ne ferme plus

--- a/photographer.html
+++ b/photographer.html
@@ -75,8 +75,8 @@
       <header>
         <h2>Contactez-moi</h2>
         <!-- <img src="assets/icons/close.svg" onclick="closeModal()" alt="bouton fermant"/> -->
-        <!-- <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()"> -->
-        <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()" onkeypress="handleKeyPress(event)">
+        <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()">
+        <!-- <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()" onkeypress="handleKeyPress(event)"> -->
       </header>
       <form name="reserve" id="form">
         <div class="formData">
