ajout d une div ( class = formulaire ) qui englobe tout le formulaire dans la modale de contact ( la div est enfant de dialog )

--- a/photographer.html
+++ b/photographer.html
@@ -71,7 +71,7 @@
   </dialog>
 
   <dialog id="contact_modal" class="modal">
-    <div>
+    <div class="formulaire">
     <header>
       <h2>Contactez-moi</h2>
       <!-- <img src="assets/icons/close.svg" onclick="closeModal()" alt="bouton fermant"/> -->
