style sur la modale de contact pour un centrage du formulaire

--- a/photographer.html
+++ b/photographer.html
@@ -71,7 +71,7 @@
   </dialog>
 
   <dialog id="contact_modal" class="modal">
-
+    <div class="container">
       <div class="formulaire">
         <header>
           <h2>Contactez-moi</h2>
@@ -103,7 +103,7 @@
           <button class="contact_button" type="submit">Envoyer</button>
         </form>
       </div>
-
+    </div>
   </dialog>
 
   <script type="module" src="/scripts/pages/photographer.js"></script>
