style sur les boutons submit et contact + adaptation à la taille de l'écran de la modale formulaire de contact

--- a/photographer.html
+++ b/photographer.html
@@ -21,7 +21,7 @@
         <h2 id="photographer-location"></h2>
         <p id="photographer-desc"></p>
       </div>
-      <button class="contact_button" id="contact">Contactez-moi</button>
+      <button class="contact_button contact" id="contact">Contactez-moi</button>
       <img id="photographer-photo">
     </div>
 
@@ -95,12 +95,12 @@
             <input class="text-control" type="email" id="email" name="email" />
             <span class="errorMessage"></span>
           </div>
-          <div>
+          <div class="formData">
             <label for="message">Votre message</label>
             <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
             <span class="errorMessage"></span>
           </div>
-          <button class="contact_button" type="submit">Envoyer</button>
+          <button class="contact_button submit" type="submit">Envoyer</button>
         </form>
       </div>
     </div>
