Ajout du nom du photographe sur le formulaire de contact en titre sous " contactez-moi "

--- a/photographer.html
+++ b/photographer.html
@@ -74,7 +74,10 @@
     <div class="container">
       <div class="formulaire">
         <header>
-          <h2>Contactez-moi</h2>
+          <div class="titre">
+            <h2>Contactez-moi</h2>
+            <h2 id="journalistName">journaliste</h2>
+          </div>
           <!-- <img src="assets/icons/close.svg" onclick="closeModal()" alt="bouton fermant"/> -->
           <img src="assets/icons/close.svg" alt="bouton fermant" role="button" tabindex="0" onclick="closeModal()"
             onkeypress="handleKeyPress(event)">
