style sur la modale de contact quand les msgs d'erreur sont absents

--- a/photographer.html
+++ b/photographer.html
@@ -86,22 +86,22 @@
           <div class="formData">
             <label for="first">Prénom</label>
             <input class="text-control" type="text" id="first" name="first" minlength="2" />
-            <span class="errorMessage"></span>
+            <div class="errorPlace"><span class="errorDisplay">&#x2713;</span><span class="errorMessage"></span></div>
           </div>
           <div class="formData">
             <label for="last">Nom</label>
             <input class="text-control" type="text" id="last" name="last" />
-            <span class="errorMessage"></span>
+            <div class="errorPlace"><span class="errorDisplay">&#x2713;</span><span class="errorMessage"></span></div>
           </div>
           <div class="formData">
             <label for="email">E-mail</label>
             <input class="text-control" type="email" id="email" name="email" />
-            <span class="errorMessage"></span>
+            <div class="errorPlace"><span class="errorDisplay">&#x2713;</span><span class="errorMessage"></span></div>
           </div>
           <div class="formData">
             <label for="message">Votre message</label>
             <textarea name="message" class="text-control" id="message" cols="30" rows="10"></textarea>
-            <span class="errorMessage"></span>
+            <div class="errorPlace"><span class="errorDisplay">&#x2713;</span><span class="errorMessage"></span></div>
           </div>
           <button class="contact_button submit" type="submit">Envoyer</button>
         </form>
