rech sur les touches fléchées du clavier ( up and down : ok ) (left and right : non ok )

--- a/photographer.html
+++ b/photographer.html
@@ -53,20 +53,19 @@
 
   <!-- Lightbox Modal -->
   <dialog id="lightbox" class="lightbox">
-
     <div class="lightbox-content">
       <div class="arrow-container">
-        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow arrow-left">
+        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow arrow-left" role="button" tabindex="0"
+          onclick="closeModal()" onkeypress="handleKeyPress(event)">
       </div>
       <div id="media-content"></div>
       <div class="arrow-container">
-        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right">
+        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right" role="button" tabindex="0"
+          onclick="closeModal()" onkeypress="handleKeyPress(event)">
         <div id="btn-close-container">
           <img id="btn-close" src="assets/icons/close.svg" alt="bouton fermer">
         </div>
-
       </div>
-      <!-- affichage Lightbox -->
     </div>
   </dialog>
 
