--- a/photographer.html
+++ b/photographer.html
@@ -61,7 +61,7 @@
         <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right" role="button" tabindex="1"
           onclick="closeModal()" onkeypress="handleKeyPress(event)">
         <div id="btn-close-container">
-          <img id="btn-close" src="assets/icons/close.svg" alt="bouton fermer">
+          <img id="btn-close" src="assets/icons/close.svg" tabindex="2" alt="bouton fermer">
         </div>
       </div>
     </div>
