--- a/photographer.html
+++ b/photographer.html
@@ -52,18 +52,30 @@
   <!-- Lightbox Modal -->
   <dialog id="lightbox" class="lightbox">
     <div class="lightbox-content">
-      <div class="arrow-container">
+      <!-- <div class="arrow-container">
         <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow arrow-left" role="button" tabindex="1"
           onclick="closeModal()" onkeypress="handleKeyPress(event)">
       </div>
       <div id="media-content"></div>
       <div class="arrow-container">
+        <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right" role="button" tabindex="1" onclick="closeModal()" onkeypress="handleKeyPress(event)">
+        <div id="btn-close-container">
+          <img id="btn-close" src="assets/icons/close.svg" tabindex="2" alt="bouton fermer">
+        </div>
+      </div> -->
+      <div class="arrow-container">
+        <img src="assets/fleches/left.svg" alt="flèche de gauche" class="arrow arrow-left" role="button" tabindex="1"
+          onclick="closeModal()">
+      </div>
+      <div id="media-content"></div>
+      <div class="arrow-container">
         <img src="assets/fleches/right.svg" alt="flèche de droite" class="arrow arrow-right" role="button" tabindex="1"
-          onclick="closeModal()" onkeypress="handleKeyPress(event)">
+          onclick="closeModal()">
         <div id="btn-close-container">
           <img id="btn-close" src="assets/icons/close.svg" tabindex="2" alt="bouton fermer">
         </div>
       </div>
+
     </div>
   </dialog>
 
